# GenAIForDev

./: .gitignore  LICENSE  LLMguardexamplecode.py  README.md  flask_api.py  loganalysis.py
sage/backend/definite.im/: .dockerignore  .gitignore  Cargo.toml  package-lock.json  package.json  tailwind.config.js
sage/backend/definite.im/assets/data/: rubric.json
sage/backend/definite.im/assets/scripts/: flowbite.min.js
sage/backend/definite.im/assets/styles/: input.css  output.css
sage/backend/definite.im/src/: html_renderer.rs  main.rs
sage/backend/definite.im/src/features/: mod.rs
sage/backend/definite.im/src/features/resumes/: mod.rs
sage/backend/definite.im/src/features/resumes/entities/: job_description.rs  mod.rs  resume.rs  resume_score.rs
sage/backend/definite.im/src/features/resumes/models/: job_description.rs  mod.rs  resume.rs
sage/backend/definite.im/src/features/resumes/routes/: mod.rs  (+5 more)
sage/backend/definite.im/src/shared/: mod.rs
sage/backend/definite.im/src/shared/auth/: google.rs  user.rs
sage/backend/definite.im/src/shared/entities/: user.rs
sage/backend/definite.im/src/shared/interceptors/: login_interceptor.rs  mod.rs
sage/backend/definite.im/src/shared/models/: google.rs
sage/backend/definite.im/src/shared/ops/: cache_ops.rs  date_ops.rs  db_ops.rs  environ_ops.rs  jwt_ops.rs  mod.rs  queue_ops.rs  schema_ops.rs
sage/backend/definite.im/src/shared/pages/: footer.hbs  google-login.hbs  header.hbs  index.hbs  login.hbs  main.hbs  privacy.hbs  tos.hbs  under-construction.hbs
sage/backend/definite.im/src/shared/routes/: index.rs
(+49 files in other folders)
