[package]
name = "definite"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.5.1", features = ["macros"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.36.0", features = ["full"] }
env_logger = "0.11.3"
log = "0.4.21"
actix-cors = "0.7.0"
handlebars = {version="5.1.2"}
rand = "0.8.5"
mongodb = {version ="3.1.0"}
chrono = { version = "0.4.*", features = ["serde"] }
futures = "0.3.30"
actix-service = "2.0.2"
redis = {version="0.26.1", features = ["tokio-comp"] }
actix-session = { version = "0.10.1", features = ["redis-session"] }
actix-files = "0.6.5"
oauth2 = "4.4.2"
reqwest = { version = "0.11", features = ["json"] }
jsonwebtoken = "9.3.0"
schemars = "0.8.21"
